add DB connection Config to application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=todoList
+
+spring.datasource.url=${DB_URL}
+spring.datasorce.username=${DB_USER}
+spring.datsource.password=${DB_USER_PASSWORD}
+
+# TODO Delete this line and use sql statement instead, to create Tables in DB
+spring.jpa.hibernate.ddl-auto=create
