add setup script to set the values needed for dbName and userCredentials

--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
-#TODO SETUP SCRIPT TO SET THE VARIABLES NOT HARDCODE IT
-MYSQL_DATABASE=todoItemsDB
-MYSQL_USER=dbUser
-MYSQL_PASSWORD=aSecretPlaceholderPassword778987
-MYSQL_ROOT_PASSWORD=anotherSecretPlaceholderPasswordButForRoot8798798
-MYSQL_PORT=3306
+MYSQL_DATABASE=
+MYSQL_USER=
+MYSQL_PASSWORD=
+MYSQL_ROOT_PASSWORD=
+MYSQL_PORT=
