change ddl-auto=create to none and use sql script to create the todoItem table if it doesnt exist yet

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,9 @@ spring.datasource.url=jdbc:mysql://${MYSQL_HOST}:${MYSQL_PORT}/${MYSQL_DATABASE}
 spring.datasource.username=${MYSQL_USER}
 spring.datasource.password=${MYSQL_PASSWORD}
 
-# TODO Delete this line and use sql statement instead, to create Tables in DB
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
+spring.sql.init.mode=always
+
+#Can be used with ddl-auto=create to see what SQL commands are executed to create the tables
+#and use those to create own schema.sql file:
+#spring.jpa.show-sql = true
